gitops/infrastructure/core/configs/gateway/gateway-public.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public
  namespace: envoy-gateway-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  gatewayClassName: envoy
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.${BASE_DOMAIN}"
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.${BASE_DOMAIN}"
      tls:
        mode: Terminate
        certificateRefs:
          - name: ${GATEWAY_TLS_SECRET_NAME}
      allowedRoutes:
        namespaces:
          from: All
